--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
-    Album Manager
+    {{"ALBUM_MANAGER" | translate}}
   </h1>
-
-<button class="btn btn-primary" (click)= "getProfile()" >Home</button>
+<button class="btn btn-primary" (click)= "getProfile()" >{{"HOME" | translate}}</button>
 <router-outlet></router-outlet>
+<div>
+<a target="_blank" href="https://privacypolicies.com/privacy/view/aRYXEk">{{"PRIVACY_POLICY" | translate}}</a>
+</div>
 
