--- a/src/app/albums/albums.component.css
+++ b/src/app/albums/albums.component.css
@@ -1,61 +1,52 @@
-/*header { 
-    padding: .5vw;
-    font-size: 0;
-    display: -ms-flexbox;
-    -ms-flex-wrap: wrap;
-    -ms-flex-direction: column;
-    -webkit-flex-flow: row wrap; 
-    flex-flow: row wrap; 
-    display: -webkit-box;
-    display: flex;
-  }
-  header div { 
-    -webkit-box-flex: auto;
-    -ms-flex: auto;
-    flex: auto; 
-    width: 200px; 
-    margin: .5vw; 
-  }
-  header div img { 
-    width: 100%; 
-    height: auto; 
-  }
-  @media screen and (max-width: 400px) {
-    header div { margin: 0; }
-    header { padding: 0; }
-    
-  }
-
-  img {
-      height: 200px !important;
-      width: auto !important;
-  }
-
-  .card {
-      border: 1px solid gray;
-      border-radius: 2px;
-  }*/
-
-  .row.display-flex {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .row.display-flex > [class*='col-'] {
-    display: flex;
-    flex-direction: column;
-  }
-  
-   /* not requied only for demo * */
-  .row [class*='col-'] {
-    background-color: #cceeee;
-    background-clip: content-box;
-  }
-  .panel {
-      height: 100%;
-  }
-
-  img {
-    height: 200px !important;
-    width: auto !important;
+* {
+  box-sizing: border-box;
 }
-  
+body {
+  background-color: #f5f5f5;
+  margin: 0 auto; 
+  max-width: 60em;
+  line-height: 1.3;
+}
+ul, li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+img {
+  width: auto;
+}
+h2 {
+  margin-top: 0;
+  margin-bottom: 0.4em;
+}
+
+/*Flex items*/
+.list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.list-item {
+	display: flex; 
+  padding: 0.5em;
+	width: 100%;
+}
+@media all and (min-width: 40em) {
+  .list-item {
+    width: 50%;
+  }
+}
+@media all and (min-width: 60em) {
+  .list-item {
+    width: 20%;
+  }
+}
+.list-content {
+	background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  padding: 1em;
+	width: 100%;
+}
+.list-content p {
+	flex: 1 0 auto;
+}
