--- a/src/app/groups/groups.component.html
+++ b/src/app/groups/groups.component.html
@@ -1,5 +1,5 @@
 
-<h2>Select a group in which you are admin, then click on it to list albums</h2>
+<h2>{{'GROUPS_TITLE' | translate}}</h2>
 <ul>
   <li *ngFor="let group of groups" class="group">
     <a [routerLink]="['/albums',group.id,group.name]" >{{group.name}}</a>
