--- a/src/app/groups/groups.component.html
+++ b/src/app/groups/groups.component.html
@@ -1,10 +1,16 @@
-<h2>
+<h2 *ngIf="groups && groups.length >0">
   {{'GROUPS_TITLE' | translate}}</h2>
-<ul>
+<div *ngIf="!groups" class="center">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif" alt="Loading...">
+</div>
+<div *ngIf="groups && groups.length == 0" class="center">
+  <h3>{{'NO_GROUP' | translate }}</h3>
+</div>
+<ul *ngIf="groups && groups.length >0">
   <li *ngFor="let group of groups" class="group">
     <div class="media">
       <div class="media-left">
-        <img src="{{group.cover.source}}" alt="photo" class="media-object" width="300">
+        <img src="{{group.cover ? group.cover.source : ''}}" alt="photo" class="media-object" width="300">
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a [routerLink]="['/albums',group.id,group.name]">{{group.name}}</a></h4>
