--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,15 +1,22 @@
-<h2>
-    {{'PAGES_TITLE' | translate}}</h2>
-  <ul>
-    <li *ngFor="let page of pages" class="page">
-      <div class="media">
-        <div class="media-left">
-          <img src="{{page.cover? page.cover.source : ''}}" alt="{{page.name}}" class="media-object" width="300">
-        </div>
-        <div class="media-body">
-          <h4 class="media-heading"><a [routerLink]="['/albums',page.id,page.name]">{{page.name}}</a></h4>
-          <p>{{page.description}}</p>
-        </div>
+<h2 *ngIf="pages && pages.length >0">
+  {{'PAGES_TITLE' | translate}}
+</h2>
+<div *ngIf="!pages" class="center">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif" alt="Loading...">
+  </div>
+  <div *ngIf="pages && pages.length == 0" class="center">
+    <h3>{{'NO_PAGE' | translate }}</h3>
+  </div>
+<ul *ngIf="pages && pages.length >0">
+  <li *ngFor="let page of pages" class="page">
+    <div class="media">
+      <div class="media-left">
+        <img src="{{page.cover? page.cover.source : ''}}" alt="{{page.name}}" class="media-object" width="300">
       </div>
-    </li>
-  </ul>
+      <div class="media-body">
+        <h4 class="media-heading"><a [routerLink]="['/albums',page.id,page.name]">{{page.name}}</a></h4>
+        <p>{{page.description}}</p>
+      </div>
+    </div>
+  </li>
+</ul>
