--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,41 +1,35 @@
-
-
-  
-
-  <!-- Fixed navbar -->
-  <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+<!-- Fixed navbar -->
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+        aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#"> {{"ALBUM_MANAGER" | translate}}</a>
-      </div>
-      <div id="navbar" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li><a routerLink="/" routerLinkActive="active">{{"HOME" | translate}}</a></li>
-          <li><a routerLink="/about" routerLinkActive="active">{{"ABOUT" | translate}}</a></li>
-          <li><a routerLink="/contact" routerLinkActive="active">{{"CONTACT" | translate}}</a></li>
-        </ul>
-      </div>
+      <a class="navbar-brand" href="#"> {{"ALBUM_MANAGER" | translate}}</a>
+    </div>
+    <div id="navbar" class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li><a routerLink="/" routerLinkActive="active">{{"HOME" | translate}}</a></li>
+        <li><a routerLink="/about" routerLinkActive="active">{{"ABOUT" | translate}}</a></li>
+        <li><a routerLink="/contact" routerLinkActive="active">{{"CONTACT" | translate}}</a></li>
+      </ul>
+    </div>
   </div>
 </nav>
 
 <!-- Begin page content -->
-<div >
-    <div class="content container">
-        <router-outlet></router-outlet>
-      </div>
-    </div>
+<div>
+  <div class="main-container">
+    <router-outlet></router-outlet>
+  </div>
+</div>
 
 <footer class="footer">
-    <div class="container">
-      <p class="text-muted"> <a target="_blank" href="https://privacypolicies.com/privacy/view/aRYXEk">{{"PRIVACY_POLICY" | translate}}</a></p>
-    </div>
-  </footer>
-
-
-   
+  <div class="container">
+    <p class="text-muted"> <a target="_blank" href="https://privacypolicies.com/privacy/view/aRYXEk">{{"PRIVACY_POLICY" | translate}}</a></p>
+  </div>
+</footer>
