--- a/src/app/photos/photos.component.css
+++ b/src/app/photos/photos.component.css
@@ -7,3 +7,66 @@ table, th, td {
     border-collapse: collapse;
     padding:2px;
 }
+
+img.like_img {
+    width: 200px;
+}
+
+* {
+    box-sizing: border-box;
+  }
+  body {
+    background-color: #f5f5f5;
+    margin: 0 auto; 
+    max-width: 60em;
+    line-height: 1.3;
+  }
+  ul, li {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  img {
+    width: auto;
+  }
+  h2 {
+    margin-top: 0;
+    margin-bottom: 0.4em;
+  }
+  
+  /*Flex items*/
+  .list {
+    display: flex;
+    justify-content:  center;
+    flex-wrap: wrap;
+  }
+  .list-item {
+      display: flex; 
+    padding: 0.5em;
+      width: 100%;
+  }
+  @media all and (min-width: 60em) {
+    .list-item {
+      width: 50%;
+    }
+  }
+  @media all and (min-width: 80em) {
+    .list-item {
+      width: 33.3%;
+    }
+  }
+  @media all and (min-width: 100em) {
+    .list-item {
+      width: 25%;
+    }
+  }
+  .list-content {
+      background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    padding: 1em;
+      width: 100%;
+  }
+  .list-content p {
+      flex: 1 0 auto;
+  }
