--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -2,21 +2,23 @@
   {{'PAGES_TITLE' | translate}}
 </h2>
 <div *ngIf="!pages" class="center">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif" alt="Loading...">
-  </div>
-  <div *ngIf="pages && pages.length == 0" class="center">
-    <h3>{{'NO_PAGE' | translate }}</h3>
-  </div>
-<ul *ngIf="pages && pages.length >0">
-  <li *ngFor="let page of pages" class="page">
-    <div class="media">
-      <div class="media-left">
-        <img src="{{page.cover? page.cover.source : ''}}" alt="{{page.name}}" class="media-object" width="300">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif" alt="Loading...">
+</div>
+<div *ngIf="pages && pages.length == 0" class="center">
+  <h3>{{'NO_PAGE' | translate }}</h3>
+</div>
+<div class="content">
+  <ul *ngIf="pages && pages.length >0">
+    <li *ngFor="let page of pages" class="page">
+      <div class="media">
+        <div class="media-left">
+          <img src="{{page.cover? page.cover.source : ''}}" alt="{{page.name}}" class="media-object" width="300">
+        </div>
+        <div class="media-body">
+          <h4 class="media-heading"><a [routerLink]="['/albums',page.id,page.name]">{{page.name}}</a></h4>
+          <p>{{page.description}}</p>
+        </div>
       </div>
-      <div class="media-body">
-        <h4 class="media-heading"><a [routerLink]="['/albums',page.id,page.name]">{{page.name}}</a></h4>
-        <p>{{page.description}}</p>
-      </div>
-    </div>
-  </li>
-</ul>
+    </li>
+  </ul>
+</div>
