--- a/src/app/albums/albums.component.html
+++ b/src/app/albums/albums.component.html
@@ -9,6 +9,25 @@
 <div *ngIf="albums && albums.length == 0" class="center">
   <h3>{{'NO_ALBUM' | translate }}</h3>
 </div>
+<div class="container search-container" *ngIf="albums && albums.length >0">
+    <div class="row">
+          <div class="col-md-6 col-md-offset-3">
+              <div id="custom-search-input">
+                  <div class="input-group col-md-12">
+                      <input type="text" #searchValue (keyup.enter)="searchAlbums(searchValue.value)" class="form-control input-lg" placeholder="{{'SEARCH_ALBUM' | translate }}" />
+                      <span class="input-group-btn">
+                          <button class="btn btn-info btn-lg" type="button" (click)="searchAlbums(searchValue.value)">
+                              <i class="glyphicon glyphicon-search"></i>
+                          </button>
+                      </span>
+                  </div>
+              </div>
+          </div>
+    </div>
+  </div>
+  <div class = "button-container">
+      <button *ngIf="searchMode && albums" class="btn btn-primary" (click)="showAll()">{{'SHOW_ALL' | translate}}</button>
+  </div>
 <div class="content container search-results" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="300"
   [scrollWindow]="false" [immediateCheck]="true" (scrolled)="onScroll()">
   <ul class="list" *ngIf="albums && albums.length >0">
